<resources>
    <string name="app_name">AdsBancoDigital</string>
    <string name="nome_nome">Nome</string>
    <string name="email_m">Email</string>
    <string name="telefone_t">Telefone</string>
    <string name="senha_S">Senha</string>
    <string name="confirma_senha">Confirma senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="recupera_conta">Recupera conta</string>
    <string name="login_l">Login</string>
    <string name="receber_email">Receber Email</string>
    <string name="descri_ema">Digite seu e-mail que enviaremos um link para você alterar sua senha.</string>
    <string name="recarga_de_celular">Recarga de celular</string>
    <string name="transferir">Transferir</string>
    <string name="extrato">Extrato</string>
    <string name="sair">Sair</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="receber">Receber</string>
    <string name="titulo">Titulo</string>
    <string name="confirmar">Confirmar</string>
</resources>