<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D3A40"
    tools:context=".autenticacao.CadastroActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_nome"
                android:textColorHint="@color/colortTextHint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_blue"
                    android:drawablePadding="16dp"
                    android:inputType="text"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_m"
                android:textColorHint="@color/colortTextHint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_login"
                    android:drawablePadding="16dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_t"
                android:textColorHint="@color/colortTextHint"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_celular_login"
                    android:drawablePadding="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_S"
                android:textColorHint="@color/colortTextHint"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_senha_login"
                    android:drawablePadding="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirma_senha"
                android:textColorHint="@color/colortTextHint"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_senha_login"
                    android:drawablePadding="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:background="@drawable/bg_btn"
                android:textColor="@android:color/white"
                android:text="Criar Conta"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                tools:visibility="visible"/>


        </LinearLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>