<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03353C"
    tools:context=".autenticacao.RecuperarContaActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/txtdescri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descri_ema"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_m"
                android:textColorHint="@color/colortTextHint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdescri">

                <Button
                    android:id="@+id/btnRecuperarConta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_btn"
                    android:onClick="validaDados"
                    android:text="@string/receber_email"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailRec"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_email_login"
                    android:drawablePadding="20dp"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimary" />

                <ProgressBar
                    android:id="@+id/progressReceber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>