<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03353C"
    tools:context=".autenticacao.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email_login"
                android:drawablePadding="16dp"
                android:textColorHint="@color/colortTextHint"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bg_edit"
                android:padding="16dp" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_senha_login"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:textColorHint="@color/colortTextHint"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bg_edit"
                android:padding="16dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_l"
                android:onClick="validaDadoss"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_btn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCriarconta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:onClick="criarConta"
                    android:layout_weight="1"
                    android:text="@string/criar_conta" />

                <TextView
                    android:id="@+id/txtrecuperarConta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/recupera_conta" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                tools:visibility="visible"
                />


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>